<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_bottom_bar_home"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_bar_tab_padding_bottom"
            android:paddingTop="@dimen/bottom_bar_tab_padding_top">

            <ImageView
                android:id="@+id/iv_bottom_bar_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:src="@drawable/selector_bottom_bar_home"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_bottom_bar_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/bottom_bar_home"
                android:textSize="10.0sp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom_bar_explore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_bar_tab_padding_bottom"
            android:paddingTop="@dimen/bottom_bar_tab_padding_top">

            <ImageView
                android:id="@+id/iv_bottom_bar_explore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:src="@drawable/selector_bottom_bar_explore"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_bottom_bar_explore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/bottom_bar_explore"
                android:textSize="10.0dip"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" />

        <LinearLayout

            android:id="@+id/ll_bottom_bar_snr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_bar_tab_padding_bottom"
            android:paddingTop="@dimen/bottom_bar_tab_padding_top">

            <ImageView
                android:id="@+id/iv_bottom_bar_snr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:src="@drawable/selector_bottom_bar_snr"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_bottom_bar_snr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/bottom_bar_snr"
                android:textSize="10.0dip"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom_bar_me"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_bar_tab_padding_bottom"
            android:paddingTop="@dimen/bottom_bar_tab_padding_top">

            <ImageView
                android:id="@+id/iv_bottom_bar_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:src="@drawable/selector_bottom_bar_me"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_bottom_bar_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/bottom_bar_me"
                android:textSize="10.0dip"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/btn_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/bottom_bar_tab_padding_bottom"
        android:paddingTop="@dimen/bottom_bar_tab_padding_top">

        <com.jason.trip.custom.view.AddFloatingActionButton
            android:id="@+id/bottom_bar_center_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="top"
            android:src="@mipmap/icon_plus"
            fab:backgroundTint="@color/colorPrimary"
            fab:elevation="0dp"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_size="normal"
            />
    </FrameLayout>

</FrameLayout>